0.9619_01 2022-07-07
  [Changes]
    * Add [Changes] hedding to the Changes file that is generated by spvmdist.
    * Non-native method must have its block.
  [Bug Fix]
    * Fix the bug that the linker output twice to stdout and stderr. Suppress stdout.
  [Incompatible Bug Fix]
    * Fix a regression bug that SPVM_NATIVE_C_BASIC_TYPE_ID_BOO_OBJECT is chagned
      to SPVM_NATIVE_C_BASIC_TYPE_ID_TYPE_CONVERSION_CONDITINAL_OBJECT wrongly.
0.9619 2022-07-07
  [New Featres]
    * Add --user-name option to spvmdist command.
    * Add --user-email option to spvmdist command.
    * Add new_c11 method to SPVM::Builder::Config
    * Add new_gnu11 method to SPVM::Builder::Config
    * Add new_cpp14 method to SPVM::Builder::Config
    * Add new_cpp17 method to SPVM::Builder::Config
  [Changes]
    * spvm_dist command add date information to the generated documents.
    * Need Time::Piece 1.12
    * Removed --output_dir option of spvmdist command from document. This was removed in past.
  [Document Fix]
    * Add new_gnu99 method to SPVM::Builder::Config
    
0.9618 2022-07-05
  [CHANGES]
    * All output of compiler and linker print to stderr.
0.9617 2022-07-05
  [New Featres]
    * Add spvm_warn to native API
  [CHANGES]
    * "use ModuleName" is added to the test case class that is generated by spvmdist command 
  [BUG FIX]
    * Fix the bug that quiet decting order bug.
  [NON BACKWORD COMPATIBLE CHANGES]
    * The default value of quiet and force of SPVM::Builder::Config become undef.
      undef means don't determin quiet and force in SPVM::Builder::Config.
0.9616 2022-07-01
  [New Featres]
    * Add to_bin method to SPVM::BlessedObject::String.
  [CHANGES]
    * Removed "Bug Report" and "Support" section from the output of spvmdist command.
  [NON BACKWORD COMPATIBLE CHANGES]
    * If a Perl scalar value is passed to SPVM string type, sv_utf8_encode don't be performed
      because this is needed to pass 8bit character(128-255) such as "\xff" to SPVM as it is.