@@ -422,6 +422,7 @@ enum {
   SPVM_NATIVE_C_BASIC_TYPE_ID_FLOAT_OBJECT,
   SPVM_NATIVE_C_BASIC_TYPE_ID_DOUBLE_OBJECT,
   SPVM_NATIVE_C_BASIC_TYPE_ID_BOOL_OBJECT,
+  SPVM_NATIVE_C_BASIC_TYPE_ID_ERROR_OBJECT,
 };
 
 enum {
@@ -435,6 +436,10 @@ enum {
   SPVM_NATIVE_C_BASIC_TYPE_CATEGORY_CLASS,
   SPVM_NATIVE_C_BASIC_TYPE_CATEGORY_INTERFACE,
   SPVM_NATIVE_C_BASIC_TYPE_CATEGORY_ANY_OBJECT,
+};
+
+enum {
+  SPVM_NATIVE_C_CLASS_ID_ERROR = 1,
 };
 
 struct spvm_env_allocator {
