@@ -1,0 +1,15 @@
+package SPVM::Error;
+
+1;
+
+=head1 Name
+
+SPVM::Error - Error
+
+=head1 Usage
+
+  use Error;
+
+=head1 Description
+
+C<Error> is a error class that class id is C<1>.
