@@ -1,4 +1,9 @@
 0.9619_01 2022-07-07
+  [New Featres]
+  * Add Error class that class id is 1.
+  * Add a constant value SPVM_NATIVE_C_BASIC_TYPE_ID_ERROR_OBJECT in native API.
+  * Add a constant value SPVM_NATIVE_C_CLASS_ID_ERROR in native API.
+  
   [Changes]
     * Add [Changes] hedding to the Changes file that is generated by spvmdist.
     * Non-native method must have its block.
